# jsonrpc

./: CMakeLists.txt  README.md
cmake/: FindJsonCpp.cmake
src/: CMakeLists.txt  Client.cpp  Client.h  Constants.h  IReceiver.h  ISender.h  IdVisitor.h  Request.cpp  Request.h  Response.cpp  Response.h  Server.cpp  Server.h
